--- a/Example/BezierShrinkwrap/Base.lproj/Main.storyboard
+++ b/Example/BezierShrinkwrap/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9046" systemVersion="15A282a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="BezierShrinkwrap_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +16,78 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="I6O-wK-EaF">
+                                <rect key="frame" x="20" y="20" width="259" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step Size:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZqF-No-lcd">
+                                        <rect key="frame" x="0.0" y="0.0" width="77" height="30"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="10" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="axC-aY-w0r">
+                                        <rect key="frame" x="82" y="0.0" width="37" height="30"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Margin:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bq-9e-dFI">
+                                        <rect key="frame" x="124" y="0.0" width="58" height="30"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="10" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AQp-PG-IgQ">
+                                        <rect key="frame" x="187" y="0.0" width="37" height="30"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lLv-tc-bd3">
+                                        <rect key="frame" x="229" y="0.0" width="30" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="Go"/>
+                                        <connections>
+                                            <action selector="goButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="549-2f-aD0"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slayer.gif" translatesAutoresizingMaskIntoConstraints="NO" id="8WH-71-YOb" customClass="MGImageView" customModule="BezierShrinkwrap_Example" customModuleProvider="target">
+                                <rect key="frame" x="119" y="163" width="363" height="273"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="363" id="6aC-nU-EeQ"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="273" id="AR8-PM-y4q"/>
+                                    <constraint firstAttribute="height" constant="273" id="JYF-ce-Xyb"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="363" id="ewr-P8-Isx"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8WH-71-YOb" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="Ff2-sw-hfe"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="I6O-wK-EaF" secondAttribute="leading" id="YWY-tP-QqM"/>
+                            <constraint firstItem="I6O-wK-EaF" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="eLP-kl-ug9"/>
+                            <constraint firstItem="8WH-71-YOb" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="l54-lU-Eb0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="image" destination="8WH-71-YOb" id="4nb-wz-WCR"/>
+                        <outlet property="marginField" destination="AQp-PG-IgQ" id="xTB-sx-3vd"/>
+                        <outlet property="stepField" destination="axC-aY-w0r" id="aGf-6H-0YL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="slayer.gif" width="400" height="400"/>
+    </resources>
 </document>
